--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+body{
+  background-color: white;
+}
+.sign{
+  outline:none;
+  margin-top: 30px;
+  padding: 5px 15px;
+  width: 97%;
+  border-radius: 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  margin: auto;
+}
+.sign-login{
+  outline:none;
+  border: 1px solid rgb(186, 106, 106);
+  padding: 5px 15px;
+  background-color: white;
+  color: rgb(248, 21, 21);
+  font-size: 17px;
+}
+.form-div{
+  gap: 20px;
+}
+input{
+  width: 340px;
+  font-size: 15px;
+  margin-top: 6px;
+  margin-left: 10px;
+  padding: 3px 5px;
+}
+/* input:focus label{
+  color:black;
+} */
+label{
+  color: rgb(74, 73, 73);
+}
+.title{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.error{
+  color:orangered
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.forgot{
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  width: 100px;
+  background-color: rgb(167, 145, 116);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px;
+}
+
+.my-sign-div{
+  background-color: white;
+  /* width: 100%; */
+  margin: 10px auto;
+  border-radius: 13px;
+}
+input{
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgb(198, 196, 196);
+}
+.home-btn{
+  border: none;
+  outline: none;
+  background-color: white;
+  /* border: 1px solid green; */
+  padding: 5px 10px;
+  /* border-radius: 5px; */
+}
+@media only screen and (max-width:992px){
+  .home-btn{
+    border: none;
+    outline: none;
+    background-color: white;
+    border: 1px solid green;
+    padding: 5px 10px;
+    /* border-radius: 5px; */
+    margin-top: 20px;
+  }
+}
+.home-btn:hover{
+  border: 1px solid green;
+}
+.sign-prop{
+  outline:none;
+  margin-top: 30px;
+  padding: 8px 15px;
+  border-radius: 15px;
+  background-color: green;
   color: white;
+  border: none;
+  margin: auto;
 }
-
-.App-link {
-  color: #61dafb;
+.child-prop{
+  position: relative;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.child-img{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: -10px;
+  right: 0px;
+}
+.par{
+  gap:14px;
+  padding: 5px;
+}
+.btn-prop{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
 }
