--- a/src/App.css
+++ b/src/App.css
@@ -78,18 +78,27 @@ input{
   border: none;
   outline: none;
   background-color: white;
-  /* border: 1px solid green; */
   padding: 5px 10px;
-  /* border-radius: 5px; */
 }
 @media only screen and (max-width:992px){
   .home-btn{
-    border: none;
-    outline: none;
+    /* border: none;
+    outline: none; */
     background-color: white;
-    border: 1px solid green;
+    width: 100%;
     padding: 5px 10px;
-    /* border-radius: 5px; */
+    margin-top: 20px;
+  }
+  .home-btn:hover{
+    /* border: none;
+    outline: none; */
+    background-color: white;
+    border-bottom: 2px solid rgb(125, 88, 155);
+    width: 100%;
+    padding: 5px 10px;
+    margin-top: 20px;
+  }
+  .btn-logout{
     margin-top: 20px;
   }
 }
